test/corpus/basic.txt
================================================================================
Null values
================================================================================

null
null.null

--------------------------------------------------------------------------------

(source_file
  (null)
  (null))

================================================================================
Boolean values
================================================================================

true
false
null.bool

--------------------------------------------------------------------------------

(source_file
  (bool)
  (bool)
  (bool))

================================================================================
Integer values
================================================================================

42
-17
0xFF
0b1010
null.int

--------------------------------------------------------------------------------

(source_file
  (int)
  (int)
  (int)
  (int)
  (int))

================================================================================
String values
================================================================================

"hello world"
"escaped \"quote\""
null.string

--------------------------------------------------------------------------------

(source_file
  (string)
  (string)
  (string))

================================================================================
Symbol values
================================================================================

'quoted_symbol'
identifier_symbol
null.symbol

--------------------------------------------------------------------------------

(source_file
  (symbol)
  (symbol)
  (symbol))

================================================================================
List values
================================================================================

[]
[1, 2, 3]
[true, "hello", null]

--------------------------------------------------------------------------------

(source_file
  (list)
  (list (int) (int) (int))
  (list (bool) (string) (null)))

================================================================================
Struct values
================================================================================

{}
{name: "John", age: 30}
{a: 1, b: [2, 3]}

--------------------------------------------------------------------------------

(source_file
  (struct)
  (struct 
    (field (symbol) (string))
    (field (symbol) (int)))
  (struct
    (field (symbol) (int))
    (field (symbol) (list (int) (int)))))

================================================================================
Annotated values
================================================================================

name::"John"
age::30
person::{name: "John", age: 30}

--------------------------------------------------------------------------------

(source_file
  (annotated_value 
    (annotation (symbol))
    (string))
  (annotated_value
    (annotation (symbol))
    (int))
  (annotated_value
    (annotation (symbol))
    (struct
      (field (symbol) (string))
      (field (symbol) (int)))))

================================================================================
Comments
================================================================================

// Line comment
/* Block comment */
42

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (block_comment)
  (int))
